@@ -1,23 +1,26 @@
+import javafx.scene.image.Image;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import javafx.scene.image.Image;
 
 public class MenuItem {
-    public String _name;
-    private ArrayList<String> _ingredients;
-    private String _imageSrc;
-    private double _price;
-    private int _prepareTime;
+    public String name;
+    private ArrayList<String> ingredients;
+    private String imageSrc;
+    private double price;
+    private int prepareTime;
     private Image image = null;
 
-    public MenuItem(String name, String[] ingredients, String imagSrc, double price, int prepareTime){
-        _name = name;
-        _ingredients = new ArrayList<String>(Arrays.asList(ingredients));
-        _imageSrc = imagSrc;
-        _price = price;
-        _prepareTime = prepareTime;
+    public MenuItem(String name, String[] ingredients, String imageSrc, double price, int prepareTime) {
+        this.name = name;
+        this.ingredients = new ArrayList<>(List.of(ingredients));
+        this.imageSrc = imageSrc;
+        this.price = price;
+        this.prepareTime = prepareTime;
     }
+
     public String getName(){
         return _name;
     }
@@ -30,6 +33,16 @@ public class MenuItem {
     public Image getImg(){
         if(image == null)
             image = new Image(getImgSrc());
+        return image;
+    }
+    public Image getImg(){
+        // Prevent the application from crashing if the image is missing
+        if (image == null && !getImgSrc().isBlank()) {
+            try {
+                image = new Image(getImgSrc());
+            } catch (IllegalArgumentException ignored) {}
+        }
+
         return image;
     }
     public double getPrice(){
@@ -48,6 +61,6 @@ public class MenuItem {
 
     }
     public void setPrice(double price){
-
+        this.price = price;
     }
 }
